Fix spacing of feed button

--- a/_sass/template.scss
+++ b/_sass/template.scss
@@ -184,7 +184,8 @@ footer {
     #feed-button {
         width: 1em;
         height: 1em;
-        padding-left: 1.2em;
+        margin-left: .1em;
+        padding-left: 1.25em;
         background-size: 1em 1em;
         background-position: 0 .1em;
         background-repeat: no-repeat;
